# Autobahn.C

./: .gitignore  CMakeLists.txt  Copyrights.txt  LICENSE  Quellen.txt  README.md  main.c
lib/consoleAdaption/: unixAdapt.c  unixAdapt.h  win32Adapt.c
lib/data/: abfahrt.csv
lib/levenshtein/: LICENSE  levenshtein.c
lib/menu/: LICENSE  linktable.c  linktable.h  menu.c  menu.h
lib/printui/: printui.c  printui.h
lib/win32adaption/: win32adapt.c  win32adapt.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: actions.c  actions.h  autobahn-schema.xml  autobahn.xml  dbio.c  dbio.h  main.c  main.h  processing.c  processing.h  ui.c  ui.h  utils.c  utils.h
src/consoleAdaption/: unixAdapt.c  win32Adapt.c  win32Adapt.h
src/lib/cJSON/tests/: test3
